# TdA24-cecilove

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  package-lock.json  package.json  supervisord.conf  tailwind.config.js
.github/workflows/: pipeline.yml
backend/: CMakeLists.txt
backend/config/: config.json  config.json.example
backend/lib/: CMakeLists.txt
backend/sql/default/: 001_init.sql
backend/sql/lecturer/: 001_init.sql
backend/src/: App.cpp  AppComponent.hpp  CMakeLists.txt  SwaggerComponent.hpp
backend/src/Config/: Config.cpp  Config.hpp
backend/src/Controller/: DefaultController.hpp  LecturerController.hpp
backend/src/Database/: DatabaseComponent.hpp  DefaultDb.hpp  LecturerDb.hpp
backend/src/Database/Models/: LecturerModel.hpp
backend/src/Dto/: ConfigDto.hpp  DefaultDto.hpp  LecturerDto.hpp  StatusDto.hpp
backend/src/ErrorHandler/: ErrorHandler.cpp  ErrorHandler.hpp
backend/src/Lecturer/: Lecturer.cpp  Lecturer.hpp
base-image/: Dockerfile
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: app.html
frontend/src/lib/: Contact.svelte  Tags.svelte  lecturer-info.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/lecturer/: +page.svelte
frontend/static/: fonts.css
nginx/: nginx.conf
